# Splatt3R-SLAM

./: .gitignore  .gitmodules  EXECUTION_FLOW.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_CHECKLIST.md  INSTALLATION_FIX.md  INTEGRATION.md  QUICKSTART.md  README.md  SECOND_ISSUE_FIX.md  THIRD_ISSUE_DIAGNOSTIC.md  TROUBLESHOOTING.md  USER_ISSUE_FIX.md  VERIFICATION.md  check_dependencies.py  main.py  main_splatt3r.py  pyproject.toml  requirements.txt  setup.py
mast3r_slam/backend/src/: gn_kernels.cu
splatt3r_core/: __init__.py  main.py  splatt3r_model.py
splatt3r_core/src/mast3r_src/dust3r/dust3r/utils/: misc.py
splatt3r_core/src/pixelsplat_src/: cuda_splatting.py  decoder_splatting_cuda.py
splatt3r_slam/: __init__.py  _setup_paths.py  dataloader.py  evaluate.py  frame.py  global_opt.py  mast3r_utils.py  matching.py  splatt3r_utils.py  tracker.py  visualization.py
splatt3r_slam/backend/src/: gn_kernels.cu  matching_kernels.cu
